# inklumin-back/src/main/java/ru/inklumin/inkluminapi/dto/NotesMetaResponse.java
@@ -1,0 +1,12 @@
+package ru.inklumin.inkluminapi.dto;
+
+import lombok.Data;
+
+@Data
+public class NotesMetaResponse {
+  private String updatedAt;
+
+  public NotesMetaResponse(String updatedAt) {
+    this.updatedAt = updatedAt;
+  }
+}
